fix(print): Adjust margins and padding for better print layout
Resets print margins to 0 and adjusts dashboard padding to 10mm on all sides. This ensures consistent spacing and a cleaner print output, especially for A4 portrait.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       @media print {
         @page { 
           size: A4 portrait; 
-          margin: 5mm; 
+          margin: 0mm; /* RESET MARGINS TO 0 TO ALLOW CSS PADDING TO CONTROL LAYOUT PRECISELY */
         }
         
         /* 
@@ -99,6 +99,8 @@
           height: auto;
           width: auto;
           overflow: visible !important;
+          margin: 0 !important;
+          padding: 0 !important;
         }
 
         /* Only make the specific dashboard container visible */
