fix: Adjust print layout for better margins
Update the printable dashboard styling to use a flexible width that adapts to the printable area, rather than a fixed 210mm. This, along with increased padding in the report component, ensures a safer and more consistent printing experience for A4 sized reports.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
           position: absolute !important;
           left: 0 !important;
           top: 0 !important;
-          width: 210mm !important; /* Force exact A4 width */
+          width: 100% !important; /* Adapt to printable width instead of forcing 210mm */
+          max-width: 210mm !important;
           margin: 0 !important;
           padding: 0 !important;
           box-shadow: none !important;
