--- a/index.html
+++ b/index.html
@@ -85,22 +85,20 @@
       @media print {
         @page { 
           size: A4 portrait; 
-          margin: 0mm; /* RESET MARGINS TO 0 TO ALLOW CSS PADDING TO CONTROL LAYOUT PRECISELY */
+          margin: 0mm; /* RESET MARGINS TO 0 */
         }
         
         /* 
            NUCLEAR OPTION FOR PRINTING
-           Use visibility: hidden on body to hide ALL floating widgets, AI buttons, 
-           and app chrome that might be injected or fixed positioned.
         */
         body {
           visibility: hidden !important;
           background: white !important;
-          height: auto;
-          width: auto;
-          overflow: visible !important;
           margin: 0 !important;
           padding: 0 !important;
+          width: 210mm !important; /* Force A4 width constraint on body */
+          height: auto !important;
+          overflow: hidden !important; /* Prevent scrollbars from creating extra pages */
         }
 
         /* Only make the specific dashboard container visible */
@@ -113,13 +111,14 @@
           position: absolute !important;
           left: 0 !important;
           top: 0 !important;
-          width: 100% !important; /* Adapt to printable width instead of forcing 210mm */
+          width: 210mm !important; /* STRICTLY 210mm */
           max-width: 210mm !important;
           margin: 0 !important;
           padding: 0 !important;
           box-shadow: none !important;
           z-index: 9999 !important;
           overflow: visible !important;
+          background: white !important;
         }
         
         /* Ensure text is always black for printing */
